--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fiorito</title>
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://use.typekit.net/jya5ygx.css">
 </head>
 
@@ -71,7 +71,11 @@
         </div>
 
     </div>
-
+    
+    <div class="estrella_roja_container">
+        <img src="img/estrella_roja.svg" class="estrella_separador">
+    </div> 
+    
     <div class="sub_menu_container">
 
         <div class="top_margin_container">
@@ -127,6 +131,10 @@
         </div>
 
     </div>
+
+    <div class="estrella_roja_container">
+        <img src="img/estrella_roja.svg" class="estrella_separador">
+    </div> 
 
     <div class="sub_menu_container">
 
